--- a/styles/sass/styles.sass
+++ b/styles/sass/styles.sass
@@ -4,4 +4,6 @@
 @import "common.blocks/header/header"
 @import "common.blocks/navigation/navigation"
 @import "common.blocks/button"
+@import "common.blocks/blog/blog"
+@import "common.blocks/expirience/expirience"
 @import "common.blocks/footer/footer"
