--- a/styles/css/common.blocks/header/header.css
+++ b/styles/css/common.blocks/header/header.css
@@ -1,5 +1,13 @@
 .header {
+  width: 100%;
+  position: absolute;
+  padding: 27px 0;
+  z-index: 1;
+}
+
+.page__container_header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
