--- a/styles/css/common.blocks/page.css
+++ b/styles/css/common.blocks/page.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .page {
@@ -9,7 +10,6 @@
   font-size: 1rem;
   color: #3d3d3d;
   font-weight: 400;
-  line-height: 2.14;
 }
 .page__container {
   max-width: 1170px;
@@ -22,6 +22,40 @@
   margin-bottom: 30px;
   width: 74px;
   height: 6px;
+  margin-top: 22px;
   border-radius: 3px;
   background-color: #ffffff;
+}
+.line_orange_medium::after {
+  content: "";
+  display: block;
+  margin: 30px auto;
+  width: 35px;
+  height: 5px;
+  background-color: #f16522;
+}
+.line_orange_medium_expirience::after {
+  content: "";
+  display: block;
+  width: 35px;
+  height: 5px;
+  background-color: #f16522;
+  margin: 17px 0 22px 0;
+}
+.line_orange_medium_margin-bottom::after {
+  content: "";
+  display: block;
+  margin: 30px auto;
+  margin-bottom: 18px;
+  width: 35px;
+  height: 5px;
+  background-color: #f16522;
+}
+.line_orange_small::after {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 4px;
+  background-color: #f16522;
+  margin: 16px 0;
 }
