--- a/styles/css/common.blocks/page/welcome-section/welcome-section.css
+++ b/styles/css/common.blocks/page/welcome-section/welcome-section.css
@@ -1,13 +1,13 @@
 .welcome-section {
   padding-top: 27px;
-  height: calc(100vh - 27px);
+  height: 100vh;
   background-color: #28282e;
   position: relative;
   z-index: 0;
 }
 .welcome-section::before {
   content: "";
-  height: 100vh;
+  height: 100%;
   width: 50vw;
   left: 0;
   top: 0;
@@ -19,30 +19,7 @@
 .welcome-section .wrapper {
   display: flex;
   align-items: center;
-  height: calc(100vh - 84px);
-}
-.welcome-section__inner {
-  max-width: 561px;
-}
-.welcome-section__inner-title, .welcome-section__inner-subtext {
-  font-family: Dosis;
-  color: #ffffff;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-.welcome-section__inner-title {
-  font-size: 5.625rem;
-  line-height: 18px;
-}
-.welcome-section__inner-subtext {
-  font-size: 3.375rem;
-}
-.welcome-section__inner-text {
-  color: #ffffff;
-  font-family: "Open Sans";
-  font-size: 1.14;
-  font-weight: 400;
-  line-height: 2.5;
+  height: calc(100vh - 74px);
 }
 .welcome-section__scroll {
   position: absolute;
@@ -64,6 +41,79 @@
 }
 .welcome-section__scroll:hover img {
   animation: down 2.5s infinite;
+}
+
+.content {
+  max-width: 561px;
+  color: #ffffff;
+}
+.content__text {
+  font-family: "Open Sans";
+  font-size: 1.14;
+  font-weight: 400;
+  line-height: 2.5;
+}
+.content__text_small {
+  font-size: 0.875rem;
+  line-height: 2.1;
+}
+.content__text_margin {
+  margin-bottom: 45px;
+}
+.content__text_medium {
+  max-width: 480px;
+}
+.content__title, .content__subtext {
+  font-family: Dosis;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.content__title {
+  font-size: 5.625rem;
+  line-height: 0.9;
+}
+.content__title_small {
+  font-size: 3.125rem;
+  margin-bottom: 7px;
+}
+.content__title_letter-space {
+  font-size: 2.5rem;
+  letter-spacing: 0.25rem;
+}
+.content__subtext {
+  font-size: 3.375rem;
+}
+.content__subtext_small {
+  font-size: 1.875rem;
+}
+.content__link {
+  display: block;
+  width: fit-content;
+  padding: 20px 30px;
+  text-decoration: none;
+  background-color: #363636;
+  color: #ffffff;
+  font-family: "Open Sans";
+  font-size: 13px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 2.6px;
+  border-radius: 2px;
+}
+.content_dark {
+  color: #3d3d3d;
+}
+.content_expirience {
+  max-width: 490px;
+}
+.content_padding {
+  padding-top: 88px;
+}
+.content_center {
+  text-align: center;
+}
+.content_margin-bottom {
+  margin-bottom: 22px;
 }
 
 @keyframes down {
