--- a/styles/sass/common.blocks/header/header.sass
+++ b/styles/sass/common.blocks/header/header.sass
@@ -1,4 +1,11 @@
 .header
+	width: 100%
+	position: absolute
+	padding: 27px 0
+	z-index: 1
+
+.page__container_header
 	display: flex
 	justify-content: space-between
 	align-items: center
+	width: 100%
