--- a/styles/sass/common.blocks/page.sass
+++ b/styles/sass/common.blocks/page.sass
@@ -3,22 +3,57 @@
 * 
 	margin: 0
 	padding: 0	
+	box-sizing: border-box
 
 .page 
 	font-family: 'Open Sans', sans-serif
 	font-size: 1rem
 	color: #3d3d3d
 	font-weight: 400
-	line-height: 2.14	
 	&__container 
 		max-width: 1170px
 		margin: 0 auto
 
-.line::after
-	content: ''
-	display: block
-	margin-bottom: 30px
-	width: 74px
-	height: 6px
-	border-radius: 3px
-	background-color: #ffffff
+.line
+	&::after
+		content: ''
+		display: block
+		margin-bottom: 30px
+		width: 74px
+		height: 6px
+		margin-top: 22px
+		border-radius: 3px
+		background-color: #ffffff
+	&_orange_medium
+		&::after
+			content: ''
+			display: block
+			margin: 30px auto
+			width: 35px
+			height: 5px
+			background-color: #f16522
+		&_expirience
+			&::after
+				content: ''
+				display: block
+				width: 35px
+				height: 5px
+				background-color: #f16522
+				margin: 17px 0 22px 0
+		&_margin-bottom
+			&::after
+				content: ''
+				display: block
+				margin: 30px auto
+				margin-bottom: 18px
+				width: 35px
+				height: 5px
+				background-color: #f16522
+	&_orange_small
+		&::after
+			content: ''
+			display: block
+			width: 30px
+			height: 4px
+			background-color: #f16522
+			margin: 16px 0
