--- a/styles/sass/common.blocks/page/welcome-section/welcome-section.sass
+++ b/styles/sass/common.blocks/page/welcome-section/welcome-section.sass
@@ -1,12 +1,12 @@
 .welcome-section
 	padding-top: 27px 
-	height: calc(100vh - 27px)
+	height: 100vh
 	background-color: #28282e
 	position: relative
 	z-index: 0
 	&::before 
 		content: ''
-		height: 100vh
+		height: 100%
 		width: 50vw
 		left: 0
 		top: 0
@@ -17,25 +17,7 @@
 	.wrapper 
 		display: flex
 		align-items: center
-		height: calc(100vh - 84px)	
-	&__inner 
-		max-width: 561px
-	&__inner-title, &__inner-subtext
-		font-family: Dosis
-		color: #ffffff
-		text-transform: uppercase
-		font-weight: 700
-	&__inner-title 
-		font-size: 5.625rem
-		line-height: 18px
-	&__inner-subtext
-		font-size: 3.375rem
-	&__inner-text 
-		color: #ffffff
-		font-family: "Open Sans"
-		font-size: 1.14
-		font-weight: 400
-		line-height: 2.5
+		height: calc(100vh - 74px)	
 	&__scroll
 		position: absolute
 		bottom: 35px
@@ -53,6 +35,62 @@
 			transition: ease
 			img 
 				animation: down 2.5s infinite
+.content 
+	max-width: 561px
+	color: #ffffff
+	&__text 
+		font-family: "Open Sans"
+		font-size: 1.14
+		font-weight: 400
+		line-height: 2.5
+		&_small
+			font-size: 0.875rem
+			line-height: 2.1
+		&_margin
+			margin-bottom: 45px
+		&_medium
+			max-width: 480px
+	&__title, &__subtext
+		font-family: Dosis
+		text-transform: uppercase
+		font-weight: 700
+	&__title 
+		font-size: 5.625rem
+		line-height: 0.9
+		&_small
+			font-size: 3.125rem
+			margin-bottom: 7px
+		&_letter-space
+			font-size: 2.5rem
+			letter-spacing: 0.25rem
+	&__subtext
+		font-size: 3.375rem
+		&_small
+			font-size: 1.875rem
+	&__link
+		display: block
+		width: fit-content 
+		padding: 20px 30px
+		text-decoration: none
+		background-color: #363636
+		color: #ffffff
+		font-family: "Open Sans"
+		font-size: 13px
+		font-weight: 400
+		text-transform: uppercase
+		letter-spacing: 2.6px
+		border-radius: 2px
+	&_dark 
+		color: #3d3d3d 
+	&_expirience
+		max-width: 490px
+	&_padding
+		padding-top: 88px
+	&_center
+		text-align: center
+	&_margin-bottom
+		margin-bottom: 22px
+
 @keyframes down
 	0%
 		transform: translate(0px, 0px) rotate(-45deg)
