--- a/styles/css/common.blocks/navigation/navigation.css
+++ b/styles/css/common.blocks/navigation/navigation.css
@@ -1,5 +1,6 @@
 .navigation__list {
   display: flex;
+  flex-wrap: wrap;
   font-family: "Dosis";
 }
 .navigation__item a {
@@ -14,4 +15,53 @@
 }
 .navigation__item:not(:first-child) {
   margin-left: 24px;
+}
+
+.mobile-nav {
+  display: none;
+  margin-top: 14px;
+}
+.mobile-nav__list {
+  display: flex;
+  flex-direction: column;
+  font-family: "Dosis";
+  align-items: center;
+  justify-content: center;
+  height: -webkit-fill-available;
+  background: #5097ff;
+}
+.mobile-nav__item {
+  margin: 15px;
+}
+.mobile-nav__item a {
+  font-size: 1.25rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  color: #ffffff;
+  text-decoration: none;
+}
+.mobile-nav__item a:hover {
+  text-decoration: underline;
+}
+
+.visible {
+  display: block;
+  animation: fadeIn 2s ease-in both;
+}
+
+@keyframes fadeIn;
+from {
+  opacity: 0;
+  transform: translate3d(0, -20%, 0);
+}
+
+to {
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
+}
+
+@media only screen and (max-width: 768px) {
+  .navigation {
+    display: none;
+  }
 }
