--- a/styles/css/common.blocks/blog/blog.css
+++ b/styles/css/common.blocks/blog/blog.css
@@ -21,6 +21,7 @@
   margin-bottom: 24px;
 }
 .blog .post-preview__image {
+  max-width: 100%;
   margin-bottom: 20px;
 }
 .blog .post-preview__title {
@@ -72,4 +73,32 @@
   background: url("../../img/cross.png");
   width: 8px;
   height: 8px;
+}
+
+@media only screen and (max-width: 790px) {
+  .blog {
+    padding: 50px 0;
+  }
+  .blog-posts {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .content__title_small {
+    font-size: 2.625rem;
+  }
+}
+@media only screen and (min-width: 791px) and (max-width: 1165px) {
+  .blog-posts {
+    justify-content: center;
+  }
+  .blog-posts__item {
+    margin-right: 20px;
+  }
+  .blog-posts__item:last-child {
+    margin-right: 0;
+  }
+  .blog-posts__item:nth-child(even) {
+    margin-right: 0;
+  }
 }
