--- a/styles/css/common.blocks/button.css
+++ b/styles/css/common.blocks/button.css
@@ -2,3 +2,82 @@ button {
   display: block;
   width: 100%;
 }
+
+.wrapper-menu {
+  width: 45px;
+  height: 45px;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  transition: transform 330ms ease-out;
+}
+.wrapper-menu::hover {
+  cursor: pointer;
+}
+
+.wrapper-menu.open {
+  transform: rotate(-45deg);
+}
+
+.line-menu {
+  background-color: #fff;
+  border-radius: 5px;
+  width: 100%;
+  height: 5px;
+}
+
+.line-menu.half {
+  width: 50%;
+}
+
+.line-menu.start {
+  transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+  transform-origin: right;
+}
+
+.open .line-menu.start {
+  transform: rotate(-90deg) translateX(3px);
+}
+
+.line-menu.end {
+  align-self: flex-end;
+  transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+  transform-origin: left;
+}
+
+.open .line-menu.end {
+  transform: rotate(-90deg) translateX(-3px);
+}
+
+.scroll-top {
+  position: fixed;
+  display: none;
+  z-index: 2;
+  right: 20px;
+  bottom: 20px;
+  background: transparent;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border: 2px solid #51AEFE;
+  transition: 0.3s;
+}
+.scroll-top i {
+  color: #51AEFE;
+  font-size: 16px;
+}
+.scroll-top:hover {
+  cursor: pointer;
+  border: 2px solid #50AFFF;
+  background: #51AEFE;
+}
+.scroll-top:hover i {
+  color: #FFFFFF;
+}
+
+@media only screen and (max-width: 768px) {
+  .wrapper-menu {
+    display: flex;
+  }
+}
