--- a/styles/css/common.blocks/header/header.css
+++ b/styles/css/common.blocks/header/header.css
@@ -1,8 +1,9 @@
 .header {
   width: 100%;
-  position: absolute;
+  position: fixed;
   padding: 27px 0;
   z-index: 1;
+  transition: 0.2s;
 }
 
 .page__container_header {
@@ -10,4 +11,10 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+}
+
+@media only screen and (max-width: 425px) {
+  .header {
+    padding: 14px 0;
+  }
 }
