--- a/styles/css/common.blocks/page.css
+++ b/styles/css/common.blocks/page.css
@@ -16,6 +16,11 @@
   margin: 0 auto;
 }
 
+@media only screen and (max-width: 1190px) {
+  .page__container {
+    padding: 0 20px;
+  }
+}
 .line::after {
   content: "";
   display: block;
@@ -58,4 +63,20 @@
   height: 4px;
   background-color: #f16522;
   margin: 16px 0;
+}
+
+@media only screen and (max-width: 425px) {
+  .page__container {
+    padding: 0 10px;
+  }
+
+  html {
+    font-size: 14px;
+    scroll-behavior: smooth;
+  }
+
+  .line::after {
+    content: "";
+    margin: 15px 0;
+  }
 }
