--- a/styles/css/common.blocks/page/welcome-section/welcome-section.css
+++ b/styles/css/common.blocks/page/welcome-section/welcome-section.css
@@ -1,6 +1,6 @@
 .welcome-section {
-  padding-top: 27px;
-  height: 100vh;
+  padding: 27px 0;
+  min-height: 100vh;
   background-color: #28282e;
   position: relative;
   z-index: 0;
@@ -19,7 +19,7 @@
 .welcome-section .wrapper {
   display: flex;
   align-items: center;
-  height: calc(100vh - 74px);
+  min-height: calc(100vh - 74px);
 }
 .welcome-section__scroll {
   position: absolute;
@@ -46,10 +46,11 @@
 .content {
   max-width: 561px;
   color: #ffffff;
+  padding: 40px 0;
 }
 .content__text {
   font-family: "Open Sans";
-  font-size: 1.14;
+  font-size: 1.14rem;
   font-weight: 400;
   line-height: 2.5;
 }
@@ -99,6 +100,12 @@
   text-transform: uppercase;
   letter-spacing: 2.6px;
   border-radius: 2px;
+  transition: 0.2s;
+}
+.content__link:hover {
+  border: 1px solid #363636;
+  color: #363636;
+  background-color: transparent;
 }
 .content_dark {
   color: #3d3d3d;
@@ -125,5 +132,47 @@
   }
   100% {
     transform: translate(0, 0) rotate(-45deg);
+  }
+}
+@media only screen and (max-width: 1170px) {
+  .welcome-section::before {
+    content: "";
+    width: 100vw;
+  }
+
+  .wrapper-menu {
+    display: flex;
+  }
+}
+@media only screen and (max-width: 425px) {
+  .content__title {
+    font-size: 4.625rem;
+  }
+  .content__subtext {
+    font-size: 2rem;
+  }
+  .content__text {
+    line-height: 1.7;
+    font-size: 1.2rem;
+  }
+
+  .welcome-section__scroll {
+    bottom: 20px;
+    left: calc(50vw - 25px);
+    width: 50px;
+    height: 50px;
+    padding: 8px 0 0 6px;
+  }
+}
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+  .content__title {
+    font-size: 4.625rem;
+  }
+  .content__subtext {
+    font-size: 2.375rem;
+  }
+  .content__text {
+    line-height: 2.3;
+    font-size: 1.2rem;
   }
 }
