--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -72,6 +72,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   margin: 0 auto;
 }
 
+@media only screen and (max-width: 1190px) {
+  .page__container {
+    padding: 0 20px;
+  }
+}
 .line::after {
   content: "";
   display: block;
@@ -116,9 +121,24 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   margin: 16px 0;
 }
 
+@media only screen and (max-width: 425px) {
+  .page__container {
+    padding: 0 10px;
+  }
+
+  html {
+    font-size: 14px;
+    scroll-behavior: smooth;
+  }
+
+  .line::after {
+    content: "";
+    margin: 15px 0;
+  }
+}
 .welcome-section {
-  padding-top: 27px;
-  height: 100vh;
+  padding: 27px 0;
+  min-height: 100vh;
   background-color: #28282e;
   position: relative;
   z-index: 0;
@@ -137,7 +157,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 .welcome-section .wrapper {
   display: flex;
   align-items: center;
-  height: calc(100vh - 74px);
+  min-height: calc(100vh - 74px);
 }
 .welcome-section__scroll {
   position: absolute;
@@ -164,10 +184,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 .content {
   max-width: 561px;
   color: #ffffff;
+  padding: 40px 0;
 }
 .content__text {
   font-family: "Open Sans";
-  font-size: 1.14;
+  font-size: 1.14rem;
   font-weight: 400;
   line-height: 2.5;
 }
@@ -217,6 +238,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   text-transform: uppercase;
   letter-spacing: 2.6px;
   border-radius: 2px;
+  transition: 0.2s;
+}
+.content__link:hover {
+  border: 1px solid #363636;
+  color: #363636;
+  background-color: transparent;
 }
 .content_dark {
   color: #3d3d3d;
@@ -245,11 +272,54 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     transform: translate(0, 0) rotate(-45deg);
   }
 }
+@media only screen and (max-width: 1170px) {
+  .welcome-section::before {
+    content: "";
+    width: 100vw;
+  }
+
+  .wrapper-menu {
+    display: flex;
+  }
+}
+@media only screen and (max-width: 425px) {
+  .content__title {
+    font-size: 4.625rem;
+  }
+  .content__subtext {
+    font-size: 2rem;
+  }
+  .content__text {
+    line-height: 1.7;
+    font-size: 1.2rem;
+  }
+
+  .welcome-section__scroll {
+    bottom: 20px;
+    left: calc(50vw - 25px);
+    width: 50px;
+    height: 50px;
+    padding: 8px 0 0 6px;
+  }
+}
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+  .content__title {
+    font-size: 4.625rem;
+  }
+  .content__subtext {
+    font-size: 2.375rem;
+  }
+  .content__text {
+    line-height: 2.3;
+    font-size: 1.2rem;
+  }
+}
 .header {
   width: 100%;
-  position: absolute;
+  position: fixed;
   padding: 27px 0;
   z-index: 1;
+  transition: 0.2s;
 }
 
 .page__container_header {
@@ -259,8 +329,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   width: 100%;
 }
 
+@media only screen and (max-width: 425px) {
+  .header {
+    padding: 14px 0;
+  }
+}
 .navigation__list {
   display: flex;
+  flex-wrap: wrap;
   font-family: "Dosis";
 }
 .navigation__item a {
@@ -277,11 +353,137 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   margin-left: 24px;
 }
 
+.mobile-nav {
+  display: none;
+  margin-top: 14px;
+}
+.mobile-nav__list {
+  display: flex;
+  flex-direction: column;
+  font-family: "Dosis";
+  align-items: center;
+  justify-content: center;
+  height: -webkit-fill-available;
+  background: #5097ff;
+}
+.mobile-nav__item {
+  margin: 15px;
+}
+.mobile-nav__item a {
+  font-size: 1.25rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  color: #ffffff;
+  text-decoration: none;
+}
+.mobile-nav__item a:hover {
+  text-decoration: underline;
+}
+
+.visible {
+  display: block;
+  animation: fadeIn 2s ease-in both;
+}
+
+@keyframes fadeIn;
+from {
+  opacity: 0;
+  transform: translate3d(0, -20%, 0);
+}
+
+to {
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
+}
+
+@media only screen and (max-width: 768px) {
+  .navigation {
+    display: none;
+  }
+}
 button {
   display: block;
   width: 100%;
 }
 
+.wrapper-menu {
+  width: 45px;
+  height: 45px;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  transition: transform 330ms ease-out;
+}
+.wrapper-menu::hover {
+  cursor: pointer;
+}
+
+.wrapper-menu.open {
+  transform: rotate(-45deg);
+}
+
+.line-menu {
+  background-color: #fff;
+  border-radius: 5px;
+  width: 100%;
+  height: 5px;
+}
+
+.line-menu.half {
+  width: 50%;
+}
+
+.line-menu.start {
+  transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+  transform-origin: right;
+}
+
+.open .line-menu.start {
+  transform: rotate(-90deg) translateX(3px);
+}
+
+.line-menu.end {
+  align-self: flex-end;
+  transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+  transform-origin: left;
+}
+
+.open .line-menu.end {
+  transform: rotate(-90deg) translateX(-3px);
+}
+
+.scroll-top {
+  position: fixed;
+  display: none;
+  z-index: 2;
+  right: 20px;
+  bottom: 20px;
+  background: transparent;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border: 2px solid #51AEFE;
+  transition: 0.3s;
+}
+.scroll-top i {
+  color: #51AEFE;
+  font-size: 16px;
+}
+.scroll-top:hover {
+  cursor: pointer;
+  border: 2px solid #50AFFF;
+  background: #51AEFE;
+}
+.scroll-top:hover i {
+  color: #FFFFFF;
+}
+
+@media only screen and (max-width: 768px) {
+  .wrapper-menu {
+    display: flex;
+  }
+}
 .blog {
   padding: 107px 0;
 }
@@ -305,6 +507,7 @@ button {
   margin-bottom: 24px;
 }
 .blog .post-preview__image {
+  max-width: 100%;
   margin-bottom: 20px;
 }
 .blog .post-preview__title {
@@ -358,6 +561,33 @@ button {
   height: 8px;
 }
 
+@media only screen and (max-width: 790px) {
+  .blog {
+    padding: 50px 0;
+  }
+  .blog-posts {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .content__title_small {
+    font-size: 2.625rem;
+  }
+}
+@media only screen and (min-width: 791px) and (max-width: 1165px) {
+  .blog-posts {
+    justify-content: center;
+  }
+  .blog-posts__item {
+    margin-right: 20px;
+  }
+  .blog-posts__item:last-child {
+    margin-right: 0;
+  }
+  .blog-posts__item:nth-child(even) {
+    margin-right: 0;
+  }
+}
 .expirience {
   margin-top: 110px;
   border-top: 1px solid #e7eaed;
@@ -408,6 +638,57 @@ button {
   text-transform: uppercase;
 }
 
+@media only screen and (max-width: 599px) {
+  .expirience {
+    margin-top: 50px;
+  }
+  .expirience-container {
+    display: block;
+  }
+  .expirience-list {
+    width: 100%;
+    justify-content: center;
+  }
+  .expirience-item {
+    border: 1px solid #e7eaed;
+    margin-bottom: 20px;
+  }
+
+  .content_padding {
+    padding-top: 44px;
+  }
+}
+@media only screen and (min-width: 600px) and (max-width: 1076px) {
+  .expirience {
+    margin-top: 50px;
+  }
+  .expirience-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .expirience-list {
+    width: 100%;
+    justify-content: center;
+  }
+  .expirience-item:nth-child(-n+2) {
+    border-top: 1px solid #e7eaed;
+  }
+  .expirience-item:nth-child(odd) {
+    border-left: 1px solid #e7eaed;
+    border-right: 1px solid #e7eaed;
+  }
+  .expirience-item:nth-child(even) {
+    border-right: 1px solid #e7eaed;
+  }
+  .expirience-item:not(:nth-last-child(-n+3)) {
+    border-bottom: 1px solid #e7eaed;
+  }
+
+  .content_padding {
+    padding-top: 44px;
+  }
+}
 .footer {
   background-color: #e7eaed;
   padding: 67px 0 70px 0;
@@ -477,7 +758,7 @@ button {
 }
 
 .info_subscribe {
-  width: 270px;
+  min-width: 270px;
 }
 
 .phone, .fax, .email {
@@ -516,4 +797,43 @@ button {
 }
 .subscribe-input__send:hover {
   cursor: pointer;
+}
+
+@media only screen and (max-width: 767px) {
+  .footer {
+    padding: 40px 0 35px 0;
+  }
+  .footer__info {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    text-align: center;
+  }
+  .footer__info li:last-child {
+    margin-bottom: 0;
+  }
+
+  .policy, .info {
+    width: 100%;
+    margin-bottom: 35px;
+  }
+
+  .info__title_adress {
+    margin-bottom: 15px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 921px) {
+  .footer__info {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  .info_address, .policy, .info_contacts {
+    width: auto;
+    margin-bottom: 20px;
+  }
+}
+@media only screen and (min-width: 922px) and (max-width: 970px) {
+  .info_address, .policy, .info_contacts {
+    margin-right: 10px;
+  }
 }
