--- a/styles/sass/common.blocks/blog/blog.sass
+++ b/styles/sass/common.blocks/blog/blog.sass
@@ -20,6 +20,7 @@
 			margin-bottom: 24px
 		&-preview
 			&__image
+				max-width: 100%
 				margin-bottom: 20px
 			&__title
 				color: #000000
@@ -65,5 +66,23 @@
 		width: 8px
 		height: 8px
 
-		
-		
+@media only screen and (max-width: 790px)
+	.blog
+		padding: 50px 0
+		&-posts
+			flex-direction: column
+			align-items: center
+	.content__title_small
+		font-size: 2.625rem
+
+@media only screen and (min-width: 791px) and (max-width: 1165px)
+	.blog
+		&-posts
+			justify-content: center
+			&__item
+				margin-right: 20px
+			&__item:last-child 
+				margin-right: 0
+			&__item:nth-child(even) 
+				margin-right: 0
+	
