--- a/styles/sass/common.blocks/expirience/expirience.sass
+++ b/styles/sass/common.blocks/expirience/expirience.sass
@@ -37,3 +37,40 @@
 			font-size: 1rem
 			font-weight: 700
 			text-transform: uppercase
+
+@media only screen and (max-width: 599px)
+	.expirience
+		margin-top: 50px
+		&-container
+			display: block
+		&-list
+			width: 100%
+			justify-content: center
+		&-item
+			border: 1px solid #e7eaed
+			margin-bottom: 20px
+	.content_padding
+		padding-top: 44px
+
+@media only screen and (min-width: 600px) and (max-width: 1076px)
+	.expirience
+		margin-top: 50px
+		&-container
+			display: flex
+			flex-wrap: wrap
+			justify-content: center
+		&-list
+			width: 100%
+			justify-content: center
+		&-item
+			&:nth-child(-n+2)
+				border-top: 1px solid #e7eaed
+			&:nth-child(odd) 
+				border-left: 1px solid #e7eaed
+				border-right: 1px solid #e7eaed
+			&:nth-child(even) 
+				border-right: 1px solid #e7eaed
+			&:not(:nth-last-child(-n+3))
+				border-bottom: 1px solid #e7eaed
+	.content_padding
+		padding-top: 44px
