--- a/styles/sass/common.blocks/header/header.sass
+++ b/styles/sass/common.blocks/header/header.sass
@@ -1,11 +1,16 @@
 .header
 	width: 100%
-	position: absolute
+	position: fixed
 	padding: 27px 0
 	z-index: 1
+	transition: .2s
 
 .page__container_header
 	display: flex
 	justify-content: space-between
 	align-items: center
 	width: 100%
+
+@media only screen and (max-width: 425px)
+	.header 
+		padding: 14px 0
