--- a/styles/sass/common.blocks/page.sass
+++ b/styles/sass/common.blocks/page.sass
@@ -14,6 +14,11 @@
 		max-width: 1170px
 		margin: 0 auto
 
+@media only screen and (max-width: 1190px)
+	.page
+		&__container
+			padding: 0 20px
+
 .line
 	&::after
 		content: ''
@@ -57,3 +62,15 @@
 			height: 4px
 			background-color: #f16522
 			margin: 16px 0
+
+@media only screen and (max-width: 425px) 
+	.page__container
+		padding: 0 10px
+	html
+		font-size: 14px
+		scroll-behavior: smooth
+	.line
+		&::after
+			content: ''
+			margin: 15px 0
+	
