--- a/styles/sass/common.blocks/page/welcome-section/welcome-section.sass
+++ b/styles/sass/common.blocks/page/welcome-section/welcome-section.sass
@@ -1,6 +1,6 @@
 .welcome-section
-	padding-top: 27px 
-	height: 100vh
+	padding: 27px 0
+	min-height: 100vh
 	background-color: #28282e
 	position: relative
 	z-index: 0
@@ -17,7 +17,7 @@
 	.wrapper 
 		display: flex
 		align-items: center
-		height: calc(100vh - 74px)	
+		min-height: calc(100vh - 74px)	
 	&__scroll
 		position: absolute
 		bottom: 35px
@@ -38,9 +38,10 @@
 .content 
 	max-width: 561px
 	color: #ffffff
+	padding: 40px 0
 	&__text 
 		font-family: "Open Sans"
-		font-size: 1.14
+		font-size: 1.14rem
 		font-weight: 400
 		line-height: 2.5
 		&_small
@@ -80,6 +81,11 @@
 		text-transform: uppercase
 		letter-spacing: 2.6px
 		border-radius: 2px
+		transition: .2s
+		&:hover 
+			border: 1px solid #363636
+			color: #363636
+			background-color: transparent
 	&_dark 
 		color: #3d3d3d 
 	&_expirience
@@ -98,4 +104,40 @@
 		transform: translate(5px, 5px) rotate(-45deg)	
 	100%
 		transform: translate(0, 0) rotate(-45deg)	
-  
+
+@media only screen and (max-width: 1170px) 
+	.welcome-section
+		&::before
+			content: ''
+			width: 100vw
+	.wrapper-menu
+		display: flex
+
+@media only screen and (max-width: 425px)
+	.content
+		&__title
+			font-size: 4.625rem
+		&__subtext
+			font-size: 2rem
+		&__text 
+			line-height: 1.7
+			font-size: 1.2rem
+	.welcome-section
+		&__scroll
+			bottom: 20px
+			left: calc(50vw - 25px)
+			width: 50px
+			height: 50px
+			padding: 8px 0 0 6px
+
+@media only screen and (min-width: 426px) and (max-width: 768px)
+	.content
+		&__title
+			font-size: 4.625rem
+		&__subtext
+			font-size: 2.375rem
+		&__text 
+			line-height: 2.3
+			font-size: 1.2rem
+
+	
